--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 # Include your project-specific ignores in this file
+/.sass-cache
+compass_app_log.txt
+/css
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
