--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,7 @@
 /.sass-cache
 compass_app_log.txt
 /css
+node_modules
+build
+
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
