--- a/.jshintrc
+++ b/.jshintrc
@@ -1,17 +1,17 @@
 {
-    "boss": true,
-    "browser": true,
-    "curly": true,
-    "eqeqeq": true,
-    "eqnull": true,
-    "expr": true,
-    "immed": true,
-    "noarg": true,
-    "node": true,
-    "onevar": true,
-    "quotmark": "double",
-    "smarttabs": true,
-    "trailing": true,
-    "undef": true,
-    "unused": true
+	"boss": true,
+	"curly": true,
+	"eqeqeq": true,
+	"eqnull": true,
+	"expr": true,
+	"immed": true,
+	"noarg": true,
+	"onevar": true,
+	"quotmark": "single",
+	"smarttabs": true,
+	"trailing": true,
+	"undef": true,
+	"unused": true,
+
+	"node": true
 }
