--- a/package.json
+++ b/package.json
@@ -1,13 +1,34 @@
 {
   "name": "digitalpierce.com",
-  "version": "0.1.0",
+  "version": "0.0.1",
+  "description": "digitalpierce.com website",
+  "scripts": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pierceray/digitalpierce.com.git"
+  },
+  "author": "Ray Pierce (@pierceray)",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pierceray/digitalpierce.com/issues"
+  },
+  "homepage": "http://digitalpierce.com",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.4",
-    "grunt-contrib-uglify": "~0.2.4",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-compass": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.6.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^1.0.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compass": "^0.9.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-imagemin": "^0.7.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-open": "^0.2.3",
+    "load-grunt-config": "^0.13.0",
+    "load-grunt-tasks": "^0.6.0",
+    "time-grunt": "^0.4.0"
   }
 }
