--- a/package.json
+++ b/package.json
@@ -21,12 +21,11 @@
     "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.10.0",
     "grunt-open": "^0.2.3",
+    "grunt-sass": "^0.18.1",
     "load-grunt-config": "^0.17.0",
     "time-grunt": "^1.1.1"
   }
