--- a/package.json
+++ b/package.json
@@ -16,17 +16,17 @@
   },
   "homepage": "http://digitalpierce.com",
   "devDependencies": {
-    "grunt": "^1.0.0",
+    "grunt": "1.0.2",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-watch": "1.1.0",
     "grunt-gh-pages": "^2.0.0",
     "grunt-open": "^0.2.3",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "2.1.0",
     "load-grunt-config": "^0.19.2",
     "time-grunt": "^1.4.0"
   }
