--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,6 @@ node_js: lts/*
 before_install:
   npm i -g npm@latest
   npm i -g greenkeeper-lockfile@latest
+install: npm install
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
