--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: node_js
 node_js: lts/*
-before_install:
-  npm i -g npm@latest
-  npm i -g greenkeeper-lockfile@latest
-install: npm install
+install: yarn
+before_install: yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
