--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build && next export",
-    "deploy": "npm run build && touch out/.nojekyll"
+    "deploy": "npm run build && touch out/.nojekyll",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,11 @@
   },
   "homepage": "http://digitalpierce.com",
   "devDependencies": {
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "husky": "^8.0.0",
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
     "typescript": "^4.7.3"
