--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "digitalpierce.com website",
   "scripts": {
     "dev": "next",
+    "lint": "eslint .",
     "build": "next build && next export",
     "deploy": "npm run build && touch out/.nojekyll",
     "prepare": "husky install"
@@ -24,7 +25,13 @@
     "@commitlint/config-conventional": "^17.0.2",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.0",
+    "lint-staged": "^13.0.2",
     "prettier": "^2.7.1",
     "sass": "^1.52.3",
     "typescript": "^4.7.4"
