--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "12.2.5",
     "react": "latest",
     "react-dom": "latest"
   }
