--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "digitalpierce.com",
   "version": "0.0.6",
   "description": "digitalpierce.com website",
+  "engines": {
+    "node": "^18.12.1"
+  },
   "scripts": {
     "build": "next build && next export",
     "deploy": "npm run build && touch out/.nojekyll",
@@ -24,7 +27,7 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@tsconfig/next": "^1.0.2",
-    "@types/node": "^16.11.59",
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
