--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "eslint:recommended",
+    "plugin:@next/next/recommended",
     "plugin:prettier/recommended"
   ],
   "env": {
@@ -12,5 +13,7 @@
   "rules": {
     "prettier/prettier": "error"
   },
-  "plugins": ["prettier"]
+  "plugins": [
+    "prettier"
+  ]
 }
