--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "devDependencies": {
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/eslint-plugin-next": "^13.0.4",
     "@tsconfig/next": "^1.0.4",
     "@types/node": "^18.11.9",
@@ -37,12 +39,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
+    "next": "13.0.4",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "next": "13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
