--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "assignees": ["pierceray"],
   "extends": ["config:base"],
   "labels": ["dependencies"],
-  "assignees": ["pierceray"]
+  "schedule": ["before 3am"]
 }
