--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build && next export",
     "deploy": "npm run build && touch out/.nojekyll",
     "dev": "next",
-    "lint": "eslint .",
+    "lint": "eslint . && next lint",
     "prepare": "husky install"
   },
   "repository": {
