--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "npm run build && touch out/.nojekyll",
     "dev": "next",
     "lint": "eslint . && next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,20 +29,29 @@
     "@commitlint/config-conventional": "^17.4.4",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@next/eslint-plugin-next": "^13.2.3",
+    "@next/eslint-plugin-next": "^13.4.12",
+    "@swc/core": "^1.3.71",
+    "@swc/jest": "^0.2.27",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.0.0",
     "@tsconfig/next": "^2.0.0",
+    "@types/jest": "^29.5.3",
     "@types/node": "^18.14.6",
-    "@types/react": "^18.0.28",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/react": "^18.2.16",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-testing-library": "^5.11.0",
     "husky": "^8.0.3",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.1.2",
     "next": "13.4.12",
     "prettier": "^3.0.0",
-    "sass": "^1.58.3",
+    "sass": "^1.64.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
   },
   "dependencies": {
