--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,15 @@
       "@/*": [
         "src/*"
       ]
-    }
+    },
+    "allowSyntheticDefaultImports": true,
   },
   "include": [
     "next-env.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
     "next.config.js",
-    "next.config.js"
+    "jest-setup.ts"
   ],
   "exclude": [
     "node_modules"
