--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
           cache: "yarn"
       - run: yarn
       - run: yarn lint
+      - run: yarn test
       - run: yarn deploy
 
       - name: GitHub Pages action
