chore: add prettier and jest to lint staged config

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,4 @@
 {
-  "*.{ts,tsx}": [
-    "eslint --fix"
-  ]
+  "*": ["prettier --write"],
+  "*.{ts,tsx}": ["eslint --fix", "jest --findRelatedTests"]
 }
