--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "devDependencies": {
     "@commitlint/cli": "^18.0.0",
     "@commitlint/config-conventional": "^18.0.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@swc/core": "^1.3.71",
     "@swc/jest": "^0.2.27",
     "@testing-library/jest-dom": "^6.0.0",
@@ -54,6 +54,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.14.15",
+    "@mui/material": "^5.14.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
