--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.6",
   "description": "digitalpierce.com website",
   "engines": {
-    "node": "^20.9.0"
+    "node": "^20.9.0 || ^22.0.0"
   },
   "scripts": {
     "build": "next build",
@@ -25,38 +25,39 @@
   },
   "homepage": "http://digitalpierce.com",
   "devDependencies": {
-    "@commitlint/cli": "^19.0.0",
-    "@commitlint/config-conventional": "^19.0.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@swc/core": "^1.3.71",
-    "@swc/jest": "^0.2.27",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@swc/core": "^1.11.24",
+    "@swc/jest": "^0.2.38",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^16.3.0",
     "@tsconfig/next": "^2.0.0",
     "@types/jest": "^29.5.3",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.2.16",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
+    "@types/node": "^22.15.3",
+    "@types/react": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^8.35.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint-config-next": "^14.1.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-testing-library": "^6.0.0",
     "husky": "^9.0.10",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "lint-staged": "^15.0.0",
-    "next": "^14.0.0",
-    "prettier": "^3.0.0",
-    "sass": "^1.64.1",
-    "typescript": "^5.4.2"
+    "lint-staged": "^15.5.1",
+    "next": "^14.1.0",
+    "prettier": "^3.5.3",
+    "sass": "^1.87.0",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@types/react-dom": "^18.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
