--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "@typescript-eslint/parser": "^8.31.1",
     "eslint": "^8.35.0",
     "eslint-config-next": "^14.1.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-config-prettier": "10.1.2",
+    "eslint-plugin-prettier": "5.3.1",
     "eslint-plugin-testing-library": "^6.0.0",
     "husky": "^9.0.10",
     "jest": "^29.6.1",
